Fix footer spacing, move title buttons

--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,6 @@
   text-align: center;
 }
 
-.is-fullheight-100vh{
-  height:100vh;
-}
-
 .is-purple{
   background-color: #B19CD8;
 }
